jenkins/svc-jenkins.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  # type: LoadBalancer
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
      appProtocol: http
    - name: jnlp
      port: 50000
      protocol: TCP
      targetPort: 50000
      appProtocol: http
  selector:
    app: jenkins
