jenkins/ing-jenkins.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-jenkins
  namespace: jenkins
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: jenkins.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-jenkins
            port: 
              # number: 8080
              name: http
